remove auth logic.

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -13,7 +13,9 @@
 <!--            app:destination="@id/nav_login" />-->
     </fragment>
 
-<!--    <include app:graph="@navigation/nav_login" />-->
+<!--    <include app:graph="@navigation/nav_poll" />-->
+
+    <!--    <include app:graph="@navigation/nav_login" />-->
 
 
 </navigation>
