Implemented intervals and displaying cups for current day.

--- a/app/src/main/res/layout/fragment_age_and_weight.xml
+++ b/app/src/main/res/layout/fragment_age_and_weight.xml
@@ -12,6 +12,7 @@
         android:layout_margin="10dp"
         android:drawableStart="@drawable/ic_arrow_back"
         android:text="@string/text_back"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="@string/poll_step2"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +36,7 @@
         android:layout_margin="20dp"
         android:gravity="start"
         android:text="@string/poll_how_old_are_you"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +50,7 @@
         android:layout_marginTop="10dp"
         android:gravity="start"
         android:text="@string/poll_older_person_gets_more_water"
+        android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +63,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:inputType="number"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitleAge" />
@@ -70,6 +75,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:text="@string/poll_what_is_your_weight"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,6 +89,7 @@
         android:layout_marginTop="10dp"
         android:gravity="start"
         android:text="@string/poll_enter_your_weight"
+        android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +102,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:inputType="number"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitleWeight" />
@@ -106,6 +114,7 @@
         android:layout_margin="20dp"
         android:enabled="false"
         android:text="@string/text_next"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputWeight" />
