--- a/app/src/main/res/drawable/background_card_border.xml
+++ b/app/src/main/res/drawable/background_card_border.xml
@@ -4,10 +4,7 @@
 
     <corners android:radius="16dp"/>
 
-    <stroke
-        android:width="8dp"
-        android:color="@android:color/transparent" />
-
-    <solid android:color="@color/white" />
+    <stroke android:width="1dp"
+        android:color="@color/white"/>
 
 </shape>
