--- a/app/src/main/res/layout/fragment_name_and_gender.xml
+++ b/app/src/main/res/layout/fragment_name_and_gender.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="@string/poll_step1"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,7 @@
         android:layout_margin="20dp"
         android:gravity="start"
         android:text="@string/poll_hello_what_is_your_name"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,10 +34,11 @@
         android:id="@+id/tvTitleName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:gravity="start"
         android:text="@string/poll_help_us_address_you_by_name"
+        android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,9 +48,10 @@
         android:id="@+id/inputName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:inputType="textPersonName"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitleName" />
@@ -59,6 +63,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:text="@string/poll_your_gender"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,10 +73,11 @@
         android:id="@+id/tvTitleGender"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:gravity="start"
         android:text="@string/poll_different_amounts_of_water_per_day"
+        android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,14 +99,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:text="@string/poll_man" />
+            android:text="@string/poll_man"
+            android:textColor="@color/white" />
 
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/rbWoman"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:text="@string/poll_woman" />
+            android:text="@string/poll_woman"
+            android:textColor="@color/white" />
 
     </RadioGroup>
 
@@ -111,6 +119,7 @@
         android:layout_margin="20dp"
         android:enabled="false"
         android:text="@string/text_next"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/genderGroup" />
