Implemented progress bar

--- a/app/src/main/res/layout/fragment_calculation.xml
+++ b/app/src/main/res/layout/fragment_calculation.xml
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:drawableStart="@drawable/ic_arrow_back"
+        android:drawableTint="@color/white"
         android:text="@string/text_back"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,6 +26,7 @@
         android:layout_marginTop="40dp"
         android:gravity="center"
         android:text="@string/poll_great_water_intake_calculated"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="@string/poll_your_rate_of_water_per_day"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/poll_edit"
+        android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,8 +75,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="@string/text_apply"
-        app:layout_constraintTop_toBottomOf="@+id/tvEdit"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvEdit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
