--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/home_today"
-        android:textSize="16sp"
         android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,8 +32,8 @@
             android:id="@+id/tvCurrentAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
             android:textColor="@color/white"
+            android:textSize="24sp"
             android:textStyle="bold"
             tools:text="2000" />
 
@@ -47,6 +47,16 @@
             tools:text="from 2400" />
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/waterProgress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearContainer" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCups"
         android:layout_width="0dp"
@@ -55,7 +65,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btnAddCup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearContainer" />
+        app:layout_constraintTop_toBottomOf="@id/waterProgress" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btnAddCup"
